# CMakeConfig

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
libs/list/: .gitignore  CMakeLists.txt  Makefile
libs/list/include/: list.h
libs/list/src/: list.c
libs/test_lib/: CMakeLists.txt
libs/test_lib/include/: test_lib.h
libs/test_lib/src/: test_lib.c
